--- a/public/huntington.html
+++ b/public/huntington.html
@@ -143,9 +143,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/house.png">
-                                <a class="butn gold" href="home">
-                                    Home Page
+                                <img src="img/partners/tele.png">
+                                <a class="butn gold" href="invoice">
+                                    Get Invoice
                                 </a>
                             </li>
                             <li class="thegold">
@@ -902,8 +902,8 @@
                 </div>
             </div>    
             <div id="invoice-footer">
-                <button class="butn" id="showtoasts" onclick="window.location.assign('download')">
-                    Download Link <i class="fas fa-angle-down"></i>
+                <button class="butn" id="showtoasts" onclick="window.location.assign('invoice')">
+                    Email Invoice <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
