--- a/public/index.html
+++ b/public/index.html
@@ -146,9 +146,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/house.png">
-                                <a class="butn gold" href="home">
-                                    Home Page
+                                <img src="img/partners/tele.png">
+                                <a class="butn gold" href="invoice">
+                                    Get Invoice
                                 </a>
                             </li>
                             <li class="thegold">
@@ -568,8 +568,8 @@
 <section class="bg-img bg-animate" data-background="img/content/home7.jpg">
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="download">
-            Download <img src="img/partners/cloud.png">
+        <a class="butn" id="vpn" data-bs-toggle="modal">
+            View Cart  <img src="img/partners/cloud.png">
         </a>
     </div>
 
@@ -673,10 +673,9 @@
                     </table>
                 </div>
             </div>    
-           
-             <div id="invoice-footer">
-                <button class="butn" id="showtoasts" onclick="window.location.assign('download')">
-                    Download Link <i class="fas fa-angle-down"></i>
+            <div id="invoice-footer">
+                <button class="butn" id="showtoasts" onclick="window.location.assign('invoice')">
+                    Email Invoice <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
