--- a/public/download.html
+++ b/public/download.html
@@ -149,9 +149,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/house.png">
-                                <a class="butn gold" href="home">
-                                    Home Page
+                                <img src="img/partners/tele.png">
+                                <a class="butn gold" href="invoice">
+                                    Get Invoice
                                 </a>
                             </li>
                             <li class="thegold">
