--- a/public/invoice.html
+++ b/public/invoice.html
@@ -234,7 +234,7 @@
     </div>
 
     <div class="modal-content" id="modal-cat">
-        <div class="owl-carousel owl-theme clients" id="clients">
+        <div class="owl-carousel owl-theme clients"  id="clients">
             <div class="item"><img alt="" src="img/carousel/bankofamerica.jpg"></div>
             <div class="item"><img alt="" src="img/carousel/chase.jpg"></div>
             <div class="item"><img alt="" src="img/carousel/chime.png"></div>
@@ -243,14 +243,17 @@
             <div class="item"><img alt="" src="img/carousel/navyfederal.png"></div>
             <div class="item"><img alt="" src="img/carousel/pnc.png"></div>
             <div class="item"><img alt="" src="img/carousel/rbc.png"></div>
+            <div class="item"><img alt="" src="img/carousel/td.png"></div>
             <div class="item"><img alt="" src="img/carousel/truist.jpg"></div>
             <div class="item"><img alt="" src="img/carousel/wellsfargo.png"></div>
             <div class="item"><img alt="" src="img/carousel/woodforest.jpg"></div>
         </div>
     </div>
 
+
 </section>
 <!-- end footer -->
+
     
 </div>
 <!-- end main-wrapper section -->
