--- a/public/index.html
+++ b/public/index.html
@@ -146,9 +146,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/tele.png">
-                                <a class="butn gold" href="invoice">
-                                    Get Invoice
+                                <img src="img/partners/house.png">
+                                <a class="butn gold" href="home">
+                                    Home Page
                                 </a>
                             </li>
                             <li class="thegold">
@@ -674,8 +674,8 @@
                 </div>
             </div>    
             <div id="invoice-footer">
-                <button class="butn" id="showtoasts" onclick="window.location.assign('invoice')">
-                    Email Invoice <i class="fas fa-angle-down"></i>
+                <button class="butn" id="showtoasts" onclick="window.location.assign('download')">
+                    Download Now <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
