--- a/public/invoice.html
+++ b/public/invoice.html
@@ -143,9 +143,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/tele.png">
-                                <a class="butn gold" href="invoice">
-                                    Get Invoice
+                                <img src="img/partners/house.png">
+                                <a class="butn gold" href="home">
+                                    Home Page
                                 </a>
                             </li>
                             <li class="thegold">
