--- a/public/download.html
+++ b/public/download.html
@@ -21,7 +21,8 @@
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/plugins/apps.css" rel="stylesheet">
     <link href="css/plugins/downloadw.css" rel="stylesheet">
-    <link href="css/plugins/load.css" rel="stylesheet">
+
+    <link href="css/plugins/email.css" rel="stylesheet">
 
     <link rel="stylesheet" href="css/light.css" />
 </head>
@@ -309,16 +310,7 @@
                             <div id="invoice-body-div">
                                 <div id="my-invoice">
                                     <div class="text-center section-heading">
-
-                                        <p id="would">
-                                           
-                                        </p>
-
-                                        <hr class="nohr">
-                                        <p id="wild">
-                                           
-                                        </p>
-
+                                        <p id="would"> </p>
                                         <hr class="nohr">
 
                                         <form  id="the-form" onsubmit="signUpFunction()">
@@ -326,7 +318,7 @@
                                                 <div id="the-life">
                                                     <img id="the-flag7" />
                                                     <input type="text" class="form-control" id="inputLife" autofocus
-                                                     placeholder="Enter Email Address" required>
+                                                     placeholder="Enter Email / Phone" required>
                                                 </div> <div id="recaptcha-container"></div>
                                             </div> <hr class="thehr" id="hr">
                                             <li class="next">
@@ -335,27 +327,6 @@
                                                 </a>
                                             </li>
                                         </form>
-
-                                        <hr class="nohr" style="display: none !important;">
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>    
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-45 col-md-7 col-12 jurit center-col" id="voice-div">
-                <div class="modal-content" id="modalsend">
-                    <div class="brock">
-                        <div class="modal-body" id="voice-body">
-                            <div id="voice-body-div">
-                                <div id="my-voice">
-                                    <div class="text-center section-heading">
-                                        <p id="would"> </p>  <hr class="nohr">
-
-                                        <p id="wild"> </p> <hr class="nohr">
 
                                     </div>
                                 </div>
