--- a/public/download.html
+++ b/public/download.html
@@ -4272,6 +4272,35 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     </div>   
 </div>
 
+<div class="modal fade"  id="saveModal" data-bs-backdrop="static" data-bs-keyboard="false">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <div class="section-heading"> <h4 class="set" id="ver-code"> VERIFY CODE </h4> </div>
+                <button type="button" class="close" id="ver-logo" data-bs-dismiss="modal">
+                    <img src="img/partners/comm.png">
+                </button>
+            </div>
+            <div class="modal-body">
+                <p class="modal-p"  id="dave-1">
+                    Check your phone inbox <br> and enter the <span>code</span>.
+                </p> <hr class="thehr thero">
+                <p class="modal-p" id="dave-2">
+                    Use the code to verify your <br> <span id="uidy">phone number</span>.
+                </p> <hr class="thehr">
+                <div class="form-group col-md-12"> <div id="code-life">
+                        <input type="text" class="form-control" id="code" autofocus placeholder="Enter The Code..." required>
+                </div> </div>  <hr class="thehr">
+                <li class="next">
+                    <button type="submit" class="butn modal-btn" id="signInWithPhone">
+                        Verify Now <img src="img/partners/tele.png">
+                    </button>
+                </li>
+            </div>
+        </div>
+    </div>   
+</div>
+
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
