--- a/public/download.html
+++ b/public/download.html
@@ -307,7 +307,7 @@
                     <div class="brock">
     
                         <div class="modal-body" id="invoice-body">
-                            <div id="invoice-body-div">
+                            <div id="voice-body-div">
                                 <div id="my-invoice">
                                     <div class="text-center section-heading">
                                         <p id="would"> </p>
