--- a/public/home.html
+++ b/public/home.html
@@ -18,7 +18,7 @@
     <link href="css/styles-8.css" rel="stylesheet" id="colors">
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/plugins/apps.css" rel="stylesheet">
-    <link href="css/plugins/invoices.css" rel="stylesheet">
+    <link href="css/plugins/home.css" rel="stylesheet">
 </head>
 <body id="thebodyz">
     <div id="preloader">
@@ -37,7 +37,7 @@
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="">
                     <span id="jinaHolder2">
-                        
+                        Burner Email / Phone.
                     </span>
                 </div>
             </a>
@@ -420,12 +420,11 @@
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/platform/1.3.6/platform.min.js"></script>
-    <script src="js/main/core.invoice.js"></script>
-    <script src="js/main/invoice.js"></script>
-    <script src="js/fire/invoices.js"></script>
+    <script src="js/main/core.home.js"></script>
+    <script src="js/main/home.js"></script>
+    <script src="js/fire/home.js"></script>
     <script src="datatables/js/jquery.datatable2.min.js"></script> 
-    <script src="js/cart/invoice.js"></script>
+    <script src="js/cart/home.js"></script>
 
 </body>
 </html>
