--- a/public/download.html
+++ b/public/download.html
@@ -1889,7 +1889,7 @@
                     </div>
                 </div>
 
-                <div class="col-120">
+                <div class="col-120 sm-display-none">
 
                     <div class="owl-carousel owl-theme"  id="services-carousel" style="margin: 20px auto 5px !important;">
 
