--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/styles-7.css" rel="stylesheet" id="colors">
     <link href="css/plugins/apps.css" rel="stylesheet">   
-    <link href="css/plugins/home.css" rel="stylesheet">   
+    <link href="css/plugins/index.css" rel="stylesheet">   
 
     <link rel="stylesheet" href="css/light.css" />
 </head>
