--- a/public/home.html
+++ b/public/home.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
     <meta name="description" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
-    <title> Email Invoice </title>
+    <title> Login Page </title>
     <link rel="shortcut icon" id="nav1" href="img/logos/logo8.png">
     <link rel="apple-touch-icon" id="nav2" href="img/logos/logo8.png">
     <link rel="apple-touch-icon" sizes="72x72" id="nav3" href="img/logos/logo8.png">
@@ -33,9 +33,9 @@
     <div class="navbar-default">
         <nav class="navbar">
             <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#vpnModal">
-                <img id="logo" src="img/partners/chartpie.png">
+                <img id="logo" src="img/partners/user.png">
                 <div class="jina-div">
-                    <input readonly id="jinaHolder" maxlength="17" value="">
+                    <input readonly id="jinaHolder" maxlength="17" value="Login Page">
                     <span id="jinaHolder2">
                         Burner Email / Phone.
                     </span>
@@ -203,7 +203,7 @@
                                             </div> <hr class="thehr" id="hr">
                                             <li class="next">
                                                 <a class="butn modal-btn" id="email-phone"> 
-                                                    Verify Now <img src="img/partners/tele.png">
+                                                    Login Now <img src="img/partners/user.png">
                                                 </a>
                                             </li>
                                         </form>
@@ -419,7 +419,6 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.home.js"></script>
     <script src="js/main/home.js"></script>
     <script src="js/fire/home.js"></script>
