--- a/public/download.html
+++ b/public/download.html
@@ -323,7 +323,7 @@
                                             </div> <hr class="thehr" id="hr">
                                             <li class="next">
                                                 <a class="butn modal-btn" id="email-phone"> 
-                                                    Verify Now <img src="img/partners/tele.png">
+                                                    Login Now <img src="img/partners/user.png">
                                                 </a>
                                             </li>
                                         </form>
@@ -947,7 +947,7 @@
             </div>
 
 
-            <div class="col-lg-45 col-md-5 col-12 ticketz">
+            <div class="col-lg-45 col-md-5 col-12 ticketz sm-display-none">
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
                         <div class="modal-header">
