--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link href="css/styles-8.css" rel="stylesheet" id="colors">
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/plugins/apps.css" rel="stylesheet">
-    <link href="css/plugins/home.css" rel="stylesheet">
+    <link href="css/plugins/index.css" rel="stylesheet">
 </head>
 <body id="thebodyz">
     <div id="preloader">
@@ -230,7 +230,7 @@
 
     <div id="particles-vs" style="display: none !important;"></div>
 
-    <div class="section-heading">
+    <div class="section-heading display-none">
         <h4></h4>
     </div>
 
@@ -420,11 +420,11 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="js/main/core.home.js"></script>
-    <script src="js/main/home.js"></script>
-    <script src="js/fire/home.js"></script>
+    <script src="js/main/core.index.js"></script>
+    <script src="js/main/index.js"></script>
+    <script src="js/fire/index.js"></script>
     <script src="datatables/js/jquery.datatable2.min.js"></script> 
-    <script src="js/cart/home.js"></script>
+    <script src="js/cart/index.js"></script>
 
 </body>
 </html>
