--- a/public/rbc.html
+++ b/public/rbc.html
@@ -21,58 +21,6 @@
     <link href="css/styles.css" rel="stylesheet" id="colors">
     <link href="css/plugins/apps.css" rel="stylesheet">
     <link rel="stylesheet" href="css/light.css" />
-    <style>
-        .pricing-list ul li:nth-child(8) {
-            font-size: 15px !important;
-        }
-        @media screen and (max-width: 769px) {
-            .pricing-list ul li:nth-child(8) {
-                font-size: 14px !important;
-        }
-        }
-        @media (max-width: 380px) {
-            .pricing-list ul li:nth-child(8) {
-                font-size: 13px !important;
-        }
-        }
-        @media (max-width: 370px) {
-            .pricing-list ul li:nth-child(8) {
-                font-size: 12px !important;
-        }
-        }
-        @media screen and (max-width: 767px) {
-            .filtering .butn {
-                font-size: 23px;
-            }
-            .filtering .butn.white{
-                font-size: 23px;
-            }
-        }
-        @media screen and (max-width: 390px) {
-            .filtering .butn {
-                font-size: 20px;
-            }
-            .filtering .butn.white{
-                font-size: 20px;
-            }
-        }
-        @media screen and (max-width: 380px) {
-            .filtering .butn {
-                font-size: 19px;
-            }
-            .filtering .butn.white{
-                font-size: 19px;
-            }
-        }
-        @media screen and (max-width: 374px) {
-            .filtering .butn {
-                font-size: 18px;
-            }
-            .filtering .butn.white{
-                font-size: 18px;
-            }
-        }
-    </style>
 </head>
 <body id="thebodyz">
     <div id="preloader">
@@ -761,8 +709,8 @@
                 </div>
             </div>
             <div class="modal-body" id="first-modal">
-                <a class="butn"  id="settings" data-bs-toggle="modal" data-bs-target="#emailModal">
-                    Deposit <img src="img/partners/bitcoin.png">
+                <a class="butn"  id="settings" data-bs-toggle="modal" data-bs-target="#profileModal">
+                    View Cart <img src="img/partners/bitcoin.png">
                 </a>
             </div>
         </div>
@@ -851,38 +799,6 @@
             </div>
         </div>
     </div>
-</div>
-
-<div class="modal fade" id="emailModal" data-bs-backdrop="static" data-bs-keyboard="false">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <div class="section-heading">
-                    <h4 class="set" id="deposit-type"> Balance: $0 </h4>
-                </div>
-                <button type="button" class="close" id="depo-logo" data-bs-toggle="modal" data-bs-target="#vpnModal">
-                    <img src="img/partners/gogle.png" id="depo-img">
-                </button>
-            </div>
-            <div class="modal-body">
-                <p class="modal-p" id="depo-1"></p> <hr class="thehr thero">
-                <p class="modal-p" id="depo-2"></p> <hr class="thehr">
-                <form  id="depo-form" onsubmit="depoFunction()">
-                    <div class="form-group col-md-12">
-                        <div id="depo-life">
-                            <img id="depo-flag7"  src="img/partners/user.png"/>
-                            <input type="number" class="form-control" id="depoLife" onkeypress="if (this.value.length > 2) return false;" min="1" required>
-                        </div>
-                    </div> <hr class="thehr">
-                    <li class="next">
-                        <a class="butn modal-btn" id="confirm-depo"> 
-                            Deposit Now <img src="img/partners/tele.png">
-                        </a>
-                    </li>
-                </form>
-            </div>
-        </div>
-    </div>   
 </div>
 
 
