--- a/public/download.html
+++ b/public/download.html
@@ -133,7 +133,7 @@
             <div class="attr-nav">
                 <ul>
                     <li class="dropdown">
-                        <div class="dropdown-toggle" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        <div class="dropdown-toggle"  data-bs-toggle="dropdown">
                             <canvas id="canvas" width="63px" height="63px"></canvas>
                             <p id="cartlength">
                                 0
