--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
 
     <div id="particles-vs" style="display: none !important;"></div>
 
-    <div class="section-heading sm-display-none">
+    <div class="section-heading">
         <h4></h4>
     </div>
 
