--- a/public/download.html
+++ b/public/download.html
@@ -300,7 +300,7 @@
             </div>
 
 
-            <div class="col-lg-45 col-md-5 col-12 ticketz sm-display-none">
+            <div class="col-lg-45 col-md-5 col-12 ticketz" style="margin-top: 12px !important; margin-bottom: -12px !important;">
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
                         <div class="modal-header">
