--- a/public/index.html
+++ b/public/index.html
@@ -141,8 +141,8 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="js/main/core.index.js"></script>
-    <script src="js/main/index.js"></script>
+    <script src="js/main/core.login.js"></script>
+    <!-- <script src="js/main/index.js"></script> -->
     <script src="js/fire/login.js"></script>
 
 </body>
