--- a/public/404.html
+++ b/public/404.html
@@ -1,56 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+    <meta charset="utf-8">
     <meta name="author" content="Bank Logs Shop Market Banklogs Bank logins" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
     <meta name="description" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
-    <title>Bank Logs</title>
-    <link rel="shortcut icon" id="nav1" href="img/logos/logo7.png">
-    <link rel="apple-touch-icon" id="nav2" href="img/logos/logo7.png">
-    <link rel="apple-touch-icon" sizes="72x72" id="nav3" href="img/logos/logo7.png">
-    <link rel="apple-touch-icon" sizes="114x114" id="nav4" href="img/logos/logo7.png">
-  
+    <title> Login Page </title>
+    <link rel="shortcut icon" id="nav1" href="img/logos/logo8.png">
+    <link rel="apple-touch-icon" id="nav2" href="img/logos/logo8.png">
+    <link rel="apple-touch-icon" sizes="72x72" id="nav3" href="img/logos/logo8.png">
+    <link rel="apple-touch-icon" sizes="114x114" id="nav4" href="img/logos/logo8.png">
     <link rel="stylesheet" href="css/plugins/app.min.css" />
-    <link href="css/styles-7.css" rel="stylesheet" id="colors">
-    <link href="css/plugins/apps.css" rel="stylesheet">   
-    <link href="css/plugins/404.css" rel="stylesheet">   
 
+    <link href="css/styles-8.css" rel="stylesheet" id="colors">
+    <link href="css/plugins/apps.css" rel="stylesheet">
+    <link href="css/plugins/login.css" rel="stylesheet">
 </head>
 <body id="thebodyz">
-<div class="main-wrapper">
-
-<section class="bg-img bg-animate" data-background="img/content/home14.jpg" style="height: 100vh !important;">
-
-    <div class="opacity-full-dark bg-extra-dark-gray">
-        <div id="particles-js"></div>
-    </div>
-
-    <div class="container-fluid infinite-floating thecont">
-        <div class="row therow">
-            <div class="col-lg-6 col-10 center-col">
-                <div class="border"></div>
-            </div>        
+    <div id="preloader">
+        <div class="row loader">
+            <div class="loader-icon"></div>
         </div>
     </div>
 
-    <div class="vpn-section">
-        <a class="butn" id="vpn" href="index">
-            Login Now <img src="img/partners/user.png">
-        </a>
+    <div class="main-wrapper">
+    
+
+<!-- start projet ection -->
+<section class="bg-img bg-animate" data-background="img/content/home12.jpg" id="logs-invoice">
+    <div class="opacity-full-dark bg-extra-dark-gray">
+        <div id="particles-js" style="display: none !important;"></div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+
+
+            <div class="col-lg-5 col-md-7 col-12 center-col" id="invoice-div">
+                <div class="modal-content" id="modalsend">
+                    <div class="brock">
+    
+                        <div class="modal-body" id="invoice-body">
+                            <div id="invoice-body-div">
+                                <div id="my-invoice">
+                                    <div class="text-center section-heading">
+
+                                        <p id="would">
+                                            A login link will be sent <br>
+                                            via <span id="in-span">Email</span> or <span id="in-span">SMS</span>
+                                        </p>
+
+                                        <hr class="nohr">
+                                        <p id="wild">
+                                            Use the link to login here.
+                                        </p>
+
+                                        <hr class="nohr">
+
+                                        <form  id="the-form" onsubmit="signUpFunction()">
+                                            <div class="form-group col-md-12" id="form">
+                                                <div id="the-life">
+                                                    <img id="the-flag7" />
+                                                    <input type="text" class="form-control" id="inputLife" autofocus
+                                                     placeholder="Enter Email / Phone" required>
+                                                </div> <div id="recaptcha-container"></div>
+                                            </div> <hr class="thehr" id="hr">
+                                            <li class="next">
+                                                <a class="butn modal-btn" id="email-phone"> 
+                                                    Login Now <img src="img/partners/user.png">
+                                                </a>
+                                            </li>
+                                        </form>
+
+                                        <hr class="nohr" style="display: none !important;">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>    
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
     </div>
 
+    <div id="particles-vs" style="display: none !important;"></div>
 
-    <div class="row therow">
-
-        <div class="col-lg-6 col-10 center-col">
-            <div class="border"></div>
-        </div>        
-
+    <div class="section-heading">
+        <h4></h4>
     </div>
-</div>
 
     <div class="owl-carousel owl-theme clients"  id="clients">
         <div class="item"><img alt="" src="img/carousel/bankofamerica.jpg"></div>
@@ -61,10 +103,12 @@
         <div class="item"><img alt="" src="img/carousel/navyfederal.png"></div>
         <div class="item"><img alt="" src="img/carousel/pnc.png"></div>
         <div class="item"><img alt="" src="img/carousel/rbc.png"></div>
+        <div class="item"><img alt="" src="img/carousel/td.png"></div>
         <div class="item"><img alt="" src="img/carousel/truist.jpg"></div>
         <div class="item"><img alt="" src="img/carousel/wellsfargo.png"></div>
         <div class="item"><img alt="" src="img/carousel/woodforest.jpg"></div>
     </div>
+
 </section>
 <!-- end footer -->
 
@@ -73,10 +117,33 @@
 <!-- end main-wrapper section -->
 
 
-    <script src="js/main/core.404.js"></script>
+<div id="style-switcher" style="display: none !important;">
+    <a class="switcher-setting">
+        <img class="logo-img" src="img/logos/logo8.png">
+    </a>
+    <div>
+        <ul class="colors">
+            <li><img src="img/logos/logo1.png" class="style1"></li>
+            <li><img src="img/logos/logo2.png" class="style2"></li>
+            <li><img src="img/logos/logo3.png" class="style3"></li>
+            <li><img src="img/logos/logo4.png" class="style4"></li>
+            <li><img src="img/logos/logo5.png" class="style5"></li>
+            <li><img src="img/logos/logo6.png" class="style6"></li>
+            <li><img src="img/logos/logo7.png" class="style7"></li>
+            <li><img src="img/logos/logo8.png" class="style8"></li>
+        </ul>
+    </div>
+</div>
+
+<a class="scroll-to-top">
+    <i class="fas fa-angle-up"></i>
+</a>
+
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="js/pages/login.js"></script>
+    <script src="js/main/core.login.js"></script>
+    <script src="js/main/login.js"></script>
+    <script src="js/fire/login.js"></script>
 
 </body>
 </html>
