--- a/public/404.html
+++ b/public/404.html
@@ -143,7 +143,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="js/main/core.login.js"></script>
     <script src="js/main/login.js"></script>
-    <script src="js/fire/login.js"></script>
+    <script src="js/pages/login.js"></script>
 
 </body>
 </html>
