--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/styles-7.css" rel="stylesheet" id="colors">
     <link href="css/plugins/apps.css" rel="stylesheet">   
-    <link href="css/plugins/home.css" rel="stylesheet">   
+    <link href="css/plugins/index.css" rel="stylesheet">   
 
     <link href="css/plugins/email.css" rel="stylesheet">
     <link rel="stylesheet" href="css/light.css" />
@@ -731,13 +731,11 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/platform/1.3.6/platform.min.js"></script>
-    <script src="js/main/core.home.js"></script>
-    <script src="js/main/home.js"></script>
+    <script src="js/main/core.index.js"></script>
+    <script src="js/main/index.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
-    <script src="js/cart/home.js"></script>
-    <script src="js/fire/home.js"></script>
+    <script src="js/cart/index.js"></script>
+    <script src="js/fire/index.js"></script>
 
 </body>
 </html>
