--- a/public/chime.html
+++ b/public/chime.html
@@ -145,9 +145,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/house.png">
+                                <img src="img/partners/user.png">
                                 <a class="butn gold" href="home">
-                                    Home Page
+                                    Login Now
                                 </a>
                             </li>
                             <li class="thegold">
