--- a/public/download.html
+++ b/public/download.html
@@ -148,9 +148,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/house.png">
+                                <img src="img/partners/user.png">
                                 <a class="butn gold" href="home">
-                                    Home Page
+                                    Login Now
                                 </a>
                             </li>
                             <li class="thegold">
@@ -3762,7 +3762,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
                 <hr class="thehr">
 
                 <p class="upload-p">
-                    Admin - <span id="mail-span" class="email-admin">email@darkweb.lat</span> 
+                    Admin - <span id="uidy" class="email-admin">email@darkweb.lat</span> 
                     <br> will then resolve your ticket.
                 </p>
             </div> 
@@ -3771,7 +3771,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
                 <div class="custom-file">
                     <input class="custom-file-input" type="file" id="photo2" accept="image/*" />
                     <label class="custom-file-label" data-browse="UPLOAD">
-                        Choose Screenshots
+                        The Screenshots
                     </label>
                 </div>
         
@@ -3782,11 +3782,6 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
                 </div>
             </div>
 
-            <!-- <div class="modal-body" id="first-modal">
-                <a class="butn"  id="settings" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    View Cart <img src="img/partners/bitcoin.png">
-                </a>
-            </div> -->
         </div>
     </div>   
 </div>
