--- a/public/index.html
+++ b/public/index.html
@@ -147,9 +147,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/house.png">
+                                <img src="img/partners/user.png">
                                 <a class="butn gold" href="home">
-                                    Home Page
+                                    Login Now
                                 </a>
                             </li>
                             <li class="thegold">
@@ -435,7 +435,7 @@
                                             via <span id="in-span">Email</span> or <span id="in-span">SMS</span>
                                         </p>
 
-                                        <hr class="nohr" style="opacity: 0.1 !important;">
+                                        <hr class="nohr" style="opacity: 0.3 !important;">
                                         <p id="wild">
                                             Use the link to login here.
                                         </p>
