--- a/public/index.html
+++ b/public/index.html
@@ -581,7 +581,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-6 col-md-12 col-12">
+            <div class="col-lg-6 col-md-12 col-12 sm-display-none">
                 <div class="modal-content" id="modalsend">
                     
                     <div class="brock">
