--- a/public/download.html
+++ b/public/download.html
@@ -289,7 +289,7 @@
 
         <div class="row xenon3" style="margin: 0 -10px !important;">
 
-            <div class="col-lg-3 col-6 center-col" id="flex-one">
+            <div class="col-lg-4 col-6 center-col" id="flex-one">
                 <div class="col-lg-9 col-12 center-col modal-body no-bord">
                     <canvas id="chart3"></canvas>
                 </div> 
@@ -300,7 +300,7 @@
             </div>
 
 
-            <div class="col-lg-45 col-md-5 col-12 ticketz display-none" style="margin-top: 12px !important; margin-bottom: -12px !important;">
+            <div class="col-lg-45 col-md-5 col-12 ticketz sm-display-none" style="margin-top: 10px !important; margin-bottom: -10px !important;">
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
                         <div class="modal-header">
