--- a/public/download.html
+++ b/public/download.html
@@ -1495,14 +1495,6 @@
                 </div>
             </div>
 
-        </div>
-    </div>
-</section>
-
-
-<section class="bg-img bg-animate" data-background="img/content/home7.jpg">
-    <div class="container-fluid">
-        <div class="row">
 
             <div class="col-lg-6 col-12 sm-display-none">
                 <div class="owl-carousel owl-theme"  id="services-carousel" style="margin: 20px auto 5px !important;">
@@ -1635,7 +1627,7 @@
                 </div>
             </div>
             
-            <div class="col-lg-6 col-12 ticketz">
+            <div class="col-lg-6 col-12" style="margin-top: 10px !important; margin-bottom: -10px !important;">
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
                         <div class="modal-header">
