--- a/public/deposit.html
+++ b/public/deposit.html
@@ -524,9 +524,9 @@
                     <p id="the-ip"></p>
                 </div>
             </div>
-            <div class="modal-body" id="first-modal">
-                <a class="butn"  id="settings" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    View Cart <img src="img/partners/bitcoin.png">
+            <div class="modal-body" id="first-modal" style="border-top: none !important;">
+                <a class="butn"  id="settings" href="home">
+                    Login Now <img src="img/partners/user.png">
                 </a>
             </div>
         </div>
