--- a/public/index.html
+++ b/public/index.html
@@ -581,7 +581,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-6 col-md-12 col-12 sm-display-none">
+            <div class="col-lg-6 col-md-12 col-12 sm-display-none" id="charv">
                 <div class="modal-content" id="modalsend">
                     
                     <div class="brock">
@@ -677,9 +677,9 @@
                     <p id="the-ip"></p>
                 </div>
             </div>
-            <div class="modal-body" id="first-modal">
-                <a class="butn"  id="settings" data-bs-toggle="modal" data-bs-target="#profileModal">
-                    View Cart <img src="img/partners/bitcoin.png">
+            <div class="modal-body" id="first-modal" style="border-top: none !important;">
+                <a class="butn"  id="settings" href="home">
+                    Login Now <img src="img/partners/user.png">
                 </a>
             </div>
         </div>
