--- a/public/truist.html
+++ b/public/truist.html
@@ -878,9 +878,9 @@
                     <label id="label-ip"></label> <br> <p id="the-ip"></p>
                 </div>
             </div>
-            <div class="modal-body" id="first-modal">
-                <a class="butn"  id="settings" data-bs-toggle="modal" data-bs-target="#profileModal">
-                    View Cart <img src="img/partners/bitcoin.png">
+            <div class="modal-body" id="first-modal" style="border-top: none !important;">
+                <a class="butn"  id="settings" href="home">
+                    Login Now <img src="img/partners/user.png">
                 </a>
             </div>
         </div>
