--- a/public/download.html
+++ b/public/download.html
@@ -3721,8 +3721,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
                 </div>
             </div>
             <div class="modal-body" id="first-modal">
-                <a class="butn"  id="settings" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    View Cart <img src="img/partners/bitcoin.png">
+                <a class="butn"  id="settings" href="home">
+                    Login Now <img src="img/partners/user.png">
                 </a>
             </div>
         </div>
