--- a/public/home.html
+++ b/public/home.html
@@ -234,31 +234,23 @@
 
     <div id="particles-vs" style="display: none !important;"></div>
 
-    <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal">
-            View Cart  <img src="img/partners/cloud.png">
-        </a>
-    </div>
-
     <div class="section-heading">
         <h4></h4>
     </div>
 
-    <div class="modal-content" id="modal-cat">
-        <div class="owl-carousel owl-theme clients"  id="clients">
-            <div class="item"><img alt="" src="img/carousel/bankofamerica.jpg"></div>
-            <div class="item"><img alt="" src="img/carousel/chase.jpg"></div>
-            <div class="item"><img alt="" src="img/carousel/chime.png"></div>
-            <div class="item"><img alt="" src="img/carousel/citi.jpg"></div>
-            <div class="item"><img alt="" src="img/carousel/huntington.jpg"></div>
-            <div class="item"><img alt="" src="img/carousel/navyfederal.png"></div>
-            <div class="item"><img alt="" src="img/carousel/pnc.png"></div>
-            <div class="item"><img alt="" src="img/carousel/rbc.png"></div>
-            <div class="item"><img alt="" src="img/carousel/td.png"></div>
-            <div class="item"><img alt="" src="img/carousel/truist.jpg"></div>
-            <div class="item"><img alt="" src="img/carousel/wellsfargo.png"></div>
-            <div class="item"><img alt="" src="img/carousel/woodforest.jpg"></div>
-        </div>
+    <div class="owl-carousel owl-theme clients"  id="clients">
+        <div class="item"><img alt="" src="img/carousel/bankofamerica.jpg"></div>
+        <div class="item"><img alt="" src="img/carousel/chase.jpg"></div>
+        <div class="item"><img alt="" src="img/carousel/chime.png"></div>
+        <div class="item"><img alt="" src="img/carousel/citi.jpg"></div>
+        <div class="item"><img alt="" src="img/carousel/huntington.jpg"></div>
+        <div class="item"><img alt="" src="img/carousel/navyfederal.png"></div>
+        <div class="item"><img alt="" src="img/carousel/pnc.png"></div>
+        <div class="item"><img alt="" src="img/carousel/rbc.png"></div>
+        <div class="item"><img alt="" src="img/carousel/td.png"></div>
+        <div class="item"><img alt="" src="img/carousel/truist.jpg"></div>
+        <div class="item"><img alt="" src="img/carousel/wellsfargo.png"></div>
+        <div class="item"><img alt="" src="img/carousel/woodforest.jpg"></div>
     </div>
 
 
@@ -372,7 +364,7 @@
     <script src="js/main/core.login.js"></script>
     <script src="js/main/login.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
-    <script src="js/cart/home.js"></script>
+    <script src="js/cart/homes.js"></script>
     <script src="js/pages/home.js"></script>
 
 </body>
