--- a/public/home.html
+++ b/public/home.html
@@ -35,7 +35,7 @@
             <div class="navbar-default">
             <nav class="navbar">
             <a class="navbar-header"  data-bs-toggle="modal" data-bs-target="#vpnModal">
-                <img id="logo" src="img/partners/house.png">
+                <img id="logo" src="img/partners/user.png">
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="Login Page">
                     <span id="jinaHolder2">
