--- a/public/download.html
+++ b/public/download.html
@@ -3637,7 +3637,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 
 
 <!-- start contact info section -->
-<section class="parallax" data-background="img/content/home7.jpg" style="padding: 0;">
+<section class="parallax" data-background="img/content/home7.jpg" style="padding: 0;" data-bs-toggle="modal" data-bs-target="#exampleModal">
 
     <div class="opacity-full-dark bg-extra-dark-gray">
         <div id="particles-vs"></div> 
