--- a/public/download.html
+++ b/public/download.html
@@ -148,9 +148,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/user.png">
-                                <a class="butn gold" href="home">
-                                    Login Now
+                                <img src="img/partners/house.png">
+                                <a class="butn gold"  href="home">
+                                    Home Page
                                 </a>
                             </li>
                             <li class="thegold">
@@ -3718,15 +3718,14 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
                     <p id="the-ip"></p>
                 </div>
             </div>
-            <div class="modal-body" id="first-modal">
-                <a class="butn"  id="settings" href="home">
-                    Login Now <img src="img/partners/user.png">
+            <div class="modal-body" id="first-modal" style="border-top: none !important;">
+                <a class="butn" id="settings" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    View Cart <img src="img/partners/user.png">
                 </a>
             </div>
         </div>
     </div>   
 </div>
-
 
 
 <div class="modal fade" id="uploadModal" data-bs-backdrop="static" data-bs-keyboard="false">
