--- a/public/huntington.html
+++ b/public/huntington.html
@@ -143,9 +143,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/user.png">
-                                <a class="butn gold" href="home">
-                                    Login Now
+                                <img src="img/partners/house.png">
+                                <a class="butn gold"  href="home">
+                                    Home Page
                                 </a>
                             </li>
                             <li class="thegold">
@@ -816,8 +816,8 @@
                 </div>
             </div>
             <div class="modal-body" id="first-modal" style="border-top: none !important;">
-                <a class="butn"  id="settings" href="home">
-                    Login Now <img src="img/partners/user.png">
+                <a class="butn" id="settings" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    View Cart <img src="img/partners/user.png">
                 </a>
             </div>
         </div>
