--- a/public/404.html
+++ b/public/404.html
@@ -145,7 +145,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.login.js"></script>
-    <script src="js/pages/door.js"></script>
+    <script src="js/pages/login.js"></script>
 
 </body>
 </html>
